--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "start": "node dist/app.js"
   },
   "dependencies": {
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
@@ -20,6 +23,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.10.0",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
