--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,51 @@ version: '3'
 services:
   app:
     build: .
+    container_name: attendance-api
     ports:
       - "3000:3000"
+    environment:
+      - MYSQL_HOST=mysql
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root_password
+      - MYSQL_DATABASE=attendance_db
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - ELASTICSEARCH_HOST=elasticsearch
+      - JWT_SECRET=your_jwt_secret
     depends_on:
       - mysql
       - redis
+      - elasticsearch
+    networks:
+      - appnet
+    restart: always
+
   mysql:
-    image: mysql:8
+    image: mysql:5.7
+    container_name: mysql
     environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: attendance_system
+      MYSQL_ROOT_PASSWORD: root_password
+      MYSQL_DATABASE: attendance_db
     ports:
       - "3306:3306"
+
   redis:
-    image: redis
+    image: redis:alpine
+    container_name: redis
     ports:
       - "6379:6379"
+
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+    ports:
+      - "9200:9200"
+    networks:
+      - esnet
+
+networks:
+  esnet:
+    driver: bridge
