feat: modify read.me and migration code

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "ts-node src/app.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/app.js",
+    "migrate": "ts-node src/pkg/db/migrate.ts"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^8.17.1",
